# Shopping-list-Functional

./: .gitignore  log_configuration.toml  logging_documention.md  pyproject.toml  shopping_list.py
json_files/: discount_codes.json  products.json  users.json
message_files/: banner.txt  help_message.txt
